--- a/vignettes/flashier_single_cell.Rmd
+++ b/vignettes/flashier_single_cell.Rmd
@@ -306,11 +306,13 @@ plot_top_genes(F[,2:6])
 ```
 
 Indeed, this approach reveals genes characteristic of the other cell
-types (e.g., GNLY for NK cells, S100A9 for CD14+ cells, CD3D for T
-cells), although not always; some genes show large expression
-increases more than one factor. We caution that this simple
-rule-of-thumb—annotating the factors by the genes with the largest
-increases in expression—may not always be helpful.
+types (e.g., GNLY for NK cells, S100A9 for CD14+ cells), although not
+always; for example, some genes show large expression increases more
+than one factor.
+
+We caution that while this simple rule-of-thumb—annotating the factors
+by the genes with the largest increases in expression—worked well
+in this example, it may not always be helpful.
 
 Session info
 ------------
