--- a/vignettes/flashier_single_cell.Rmd
+++ b/vignettes/flashier_single_cell.Rmd
@@ -154,8 +154,10 @@ A few notes about this flash call:
 
 + `backfit = FALSE` skips the backfitting step. Backfitting can often
   grealy improve the fit, and is generally recommended for better
-  result, but can sometimes take a long time to complete. We have
-  omitted the backfitting step here to shorten the `flash()` call.
+  result. (And indeed backfitting noticeably improves the fit for
+  these data.) On the other hand, backfitting can sometimes take a
+  long time to complete, so have omitted the backfitting step here to
+  shorten the computational effort involved.
 
 The plot method with default settings produces a "scree plot" showing
 the proportion of variance explained by each of the 8 factors:
