--- a/vignettes/flashier_single_cell.Rmd
+++ b/vignettes/flashier_single_cell.Rmd
@@ -45,6 +45,7 @@ cells and $p$ is the number of genes:
 ```{r load-data}
 data("pbmc_facs")
 counts <- pbmc_facs$counts
+colnames(counts) <- make.names(pbmc_facs$genes$symbol, unique = TRUE)
 dim(counts)
 ```
 
@@ -163,7 +164,7 @@ The plot method with default settings produces a "scree plot" showing
 the proportion of variance explained by each of the 8 factors:
 
 ```{r scree-plot, fig.height=2, fig.width=3}
-plot(fit, order_by_pve = FALSE)
+plot(fit)
 ```
 
 Factors 7 and 8 explain a very small proportion of variation (and
@@ -204,13 +205,9 @@ represented as a bar of a different color, and the bar heights are
 given by the membership levels. 
 
 ```{r structure-plot-1, fig.height=2, fig.width=5, results="hide", message=FALSE}
-factor_colors <- c("#e41a1c","#377eb8","#4daf4a","#984ea3","#ff7f00",
-                   "#ffff33","#a65628","#f781bf")
 plot(fit, 
-     order_by_pve = FALSE,
      pm_which = "loadings", 
      pm_groups = pbmc_facs$samples$subpop,
-     pm_colors = factor_colors,
      plot_type = "structure",
      gap = 25)
 ```
@@ -223,8 +220,6 @@ factor from our structure plot:
 ```{r structure-plot-2, fig.height=2, fig.width=5, results="hide", message=FALSE}
 plot(fit, 
      kset = 2:8,
-     order_by_pve = FALSE,
-     pm_colors = factor_colors[-1],
      pm_which = "loadings", 
      pm_groups = pbmc_facs$samples$subpop,
      plot_type = "structure",
@@ -245,7 +240,6 @@ We can also visualize the cell matrix with a heatmap:
 
 ```{r heatmap, fig.height=3.5, fig.width=3.25, message=FALSE, results="hide"}
 plot(fit, 
-     order_by_pve = FALSE,
      pm_which = "loadings", 
      pm_groups = pbmc_facs$samples$subpop,
      plot_type = "heatmap",
@@ -277,31 +271,22 @@ factor 6 are also genes characteristic of B cells:
 res <- ldf(fit, type = "i")
 F <- with(res, F %*% diag(D))
 rownames(F) <- pbmc_facs$genes$symbol
-head(sort(F[,6],decreasing = TRUE),n = 16)
+head(sort(F[,6], decreasing = TRUE), n = 16)
 ```
 
 Let's now apply this simple rule-of-thumb and examine the top 4 genes
 (by expression increase) for factors 2 through 6:
 
 ```{r top-genes-all, fig.height=4, fig.width=2.5, message=FALSE}
-plot_top_genes <- function (F, n = 4) {
-  F <- as.data.frame(F)
-  k <- ncol(F)
-  rows <- lapply(F,function (x) head(order(x,decreasing = TRUE),n = n))
-  rows <- rev(unique(unlist(rows)))
-  n    <- length(rows)
-  F    <- F[rows,]
-  pdat <- melt(F,variable_name = "factor")
-  pdat <- cbind(pdat,pos = 1:n)
-  return(ggplot(pdat,aes(x = factor,y = pos,fill = value)) +
-    geom_tile(width = 0.8,color = "white",linewidth = 0.5) +
-    scale_fill_gradient(low = "white",high = "darkred") +
-    scale_y_continuous(breaks = 1:n,labels = rownames(F)) +
-    labs(y = "") +
-    theme_cowplot(font_size = 10))
-}
-colnames(F) <- paste0("k",1:8)
-plot_top_genes(F[,2:6])
+top_genes <- apply(F, 2, order, decreasing = TRUE)[1:4, 2:6]
+top_genes <- rownames(fit$F_pm)[top_genes]
+plot(fit,
+     kset = 2:6,
+     pm_which = "factors",
+     pm_subset = top_genes,
+     pm_groups = factor(top_genes, levels = rev(top_genes)),
+     plot_type = "heatmap",
+     loadings_order = 1:length(top_genes))
 ```
 
 Indeed, this approach reveals genes characteristic of the other cell
@@ -316,21 +301,15 @@ Plot of mean vs. change for factor 6 ("B cells"), with top 10 genes
 (by largest increase):
 
 ```{r plot-change-vs-mean, fig.height=3, fig.width=3}
-mu <- colMeans(shifted_log_counts)
-plot_change_vs_mean <- function (fit, mu, genes, k = 1, n = 10) {
-  pdat <- data.frame(mean = mu,change = ldf(fit)$F[,k],gene = genes)
-  rows <- order(pdat$change,decreasing = TRUE)
-  rows <- rows[1:n]
-  pdat[-rows,"gene"] <- ""
-  return(ggplot(pdat,aes(x = change,y = mean,label = gene)) +
-         geom_point(shape = 1,color = "dodgerblue") +
-         geom_text_repel(color = "black",size = 2.5,max.overlaps = Inf) +
-		 labs(x = "increase in shifted log-expression",
-		      y = "mean shifted log-expression",
-			  title = paste("factor",k)) +
-	     theme_cowplot(font_size = 10))
-}
-plot_change_vs_mean(fit,mu,pbmc_facs$genes$symbol,k = 6)
+plot(fit,
+     kset = 6,
+     pm_which = "factors",
+     plot_type = "scatter",
+     n_labels = 10,
+     label_size = 2,
+     max.overlaps = Inf) +
+ labs(x = "increase in shifted log-expression",
+      y = "mean shifted log-expression") 
 ```
 
 Other notes
